--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <div class="row">
         <div class="container">
             <div class="row">
-                <div class="col-12" id="header"></div>
+                <div class="col-12" id="header">
+                    <h1>New York Times Search</h1>
+                </div>
             </div>
         </div>
     </div>
