added a consolelogdata and styling to header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <style>
-        .row {
+        /* .row {
             border: 2px solid red;
             margin-top: 5px;
             margin-bottom: 5px;
@@ -28,13 +28,13 @@
             border: 2px solid blue;
             margin-top: 5px;
             margin-bottom: 5px;
-        }
+        } */
     </style>
 </head>
 
 <body class="container-fluid">
 
-    <div class="row">
+    <div class="row" id="headerRow">
         <div class="container">
             <div class="row">
                 <div class="col-12" id="header">
